force-app/main/default/objects/Order_Detail__e/Order_Detail__e.object-meta.xml
<CustomObject>
    <description>PGP-0015 : Platform Event To Stores all Order Details</description>
    <label>Order Detail</label>
    <pluralLabel>Order Details</pluralLabel>
</CustomObject>