force-app/main/default/objects/Order_Detail__e/fields/Generate_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Generate_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Invoice</label>
    <type>Checkbox</type>
</CustomField>