force-app/main/default/objects/Order_Detail__e/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>PGP-0017 : STore Event Payload Request</description>
    <label>Payload</label>
    <length>131070</length>
    <type>LongTextArea</type>
</CustomField>